# local-whisper

./: .gitignore  README.md  audio_utils.py  cli.py  config.yaml  keyboard_handler.py  main.py  pyproject.toml  recorder.py  run_whisper.bat  silence_filter.py  transcriber.py
